Use GitHub URL for background image (#77)
* Use GitHub URL for background image

* Bump CI

* Make alternative theme in folder

* Type hints

* Fix /

--- a/template.jinja2
+++ b/template.jinja2
@@ -3,7 +3,7 @@
 #
 ios-{{ which }}-mode-{{ color }}{{ suffix }}:
   # Global
-  background-image: "center / cover no-repeat fixed url('{{ background_jpg }}')"
+  background-image: "center / cover no-repeat fixed url('{{ background }}')"
   lovelace-background: var(--background-image)
   primary-color: {{ primary_color }}  # from Apple systemOrange {{ which }} mode
   light-primary-color: {{ light_primary_color }}  # (icons on left menu) (light: systemGray5 from iOS dark mode, dark: XXX)
